[gd_scene load_steps=16 format=3 uid="uid://bcrvra711mxd7"]

[ext_resource type="Texture2D" uid="uid://dr36u3f75w23x" path="res://images and assets/word_bg-1.png" id="1_e52k4"]
[ext_resource type="Script" path="res://gd/random_code_generator.gd" id="1_w4t25"]
[ext_resource type="Theme" uid="uid://b4mwkq2yq6sf0" path="res://materials/wordzardryTheme9.tres" id="6_s43u1"]
[ext_resource type="Theme" uid="uid://c5yspu3fw6s8" path="res://materials/wordzardryTheme7.tres" id="7_1n1wr"]
[ext_resource type="Texture2D" uid="uid://se8cec8qnf5l" path="res://images and assets/logo.png" id="7_rkvkf"]
[ext_resource type="Theme" uid="uid://dtohx0ueb2kxp" path="res://materials/wordzardryTheme8.tres" id="8_8tmsi"]
[ext_resource type="Texture2D" uid="uid://b82lib04hsoux" path="res://images and assets/Rectangle 12.png" id="8_wihii"]
[ext_resource type="Texture2D" uid="uid://byw6a5u0ay6fk" path="res://images and assets/Box.png" id="9_7e83y"]

[sub_resource type="Theme" id="Theme_2okf5"]
Label/font_sizes/font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtp8s"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_oc043"]
LineEdit/colors/caret_color = Color(0, 0, 0, 1)
LineEdit/colors/font_color = Color(0, 0, 0, 1)
LineEdit/font_sizes/font_size = 50
LineEdit/styles/normal = SubResource("StyleBoxFlat_gtp8s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4unwo"]
bg_color = Color(0.992157, 0.807843, 0.231373, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3r8x"]
bg_color = Color(0.894118, 0.717647, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.596078, 0.47451, 0.0352941, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1aue"]
bg_color = Color(0.541176, 0.427451, 0.0313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.596078, 0.47451, 0.0352941, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
shadow_size = 2

[sub_resource type="Theme" id="Theme_5cy6u"]
Button/font_sizes/font_size = 30
Button/styles/hover = SubResource("StyleBoxFlat_4unwo")
Button/styles/normal = SubResource("StyleBoxFlat_p3r8x")
Button/styles/pressed = SubResource("StyleBoxFlat_w1aue")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4t25")

[node name="TempBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -3.0
offset_right = 8874.0
offset_bottom = 3908.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.177538, 0.216537)
size_flags_horizontal = 0
texture = ExtResource("1_e52k4")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 831.0
offset_top = 378.0
offset_right = 1831.0
offset_bottom = 1378.0
scale = Vector2(0.3, 0.295)
texture = ExtResource("7_rkvkf")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 491.0
offset_top = 482.0
offset_right = 1516.0
offset_bottom = 578.0
theme_override_colors/font_color = Color(0.392157, 0.239216, 0.580392, 1)
theme_override_colors/font_shadow_color = Color(0.145098, 0.0117647, 0.117647, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 70
text = "CHOOSE A GAMEPLAY OPTION"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1921.0
offset_bottom = 1083.0

[node name="MainFrame" type="Sprite2D" parent="."]
position = Vector2(960.5, 543)
scale = Vector2(2.78406, 1.803)
texture = ExtResource("8_wihii")

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(1049, 528)
scale = Vector2(1.82231, 1.67888)
texture = ExtResource("9_7e83y")

[node name="Enter Code" type="Label" parent="Box"]
offset_left = -153.627
offset_top = -168.423
offset_right = 125.373
offset_bottom = -113.423
theme = SubResource("Theme_2okf5")
text = "CREATE ROOM"

[node name="Room Code" type="Label" parent="Box"]
offset_left = -258.162
offset_top = -70.8782
offset_right = -96.162
offset_bottom = -30.8782
theme_override_font_sizes/font_size = 29
text = "Room Code"

[node name="Room Name" type="Label" parent="Box"]
offset_left = -302.91
offset_top = 9.66522
offset_right = -94.9101
offset_bottom = 49.6652
theme_override_font_sizes/font_size = 29
text = "Room Name"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 934.0
offset_top = 399.0
offset_right = 1382.0
offset_bottom = 495.0
theme = SubResource("Theme_oc043")
expand_to_text_length = true
selecting_enabled = false

[node name="RNLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 539.0
offset_right = 1378.0
offset_bottom = 624.0
theme = SubResource("Theme_oc043")

[node name="VBoxContainer2" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 1421.0
offset_bottom = 834.0
scale = Vector2(1.35587, 1.28989)

[node name="Button" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 0
offset_left = 1044.35
offset_top = 308.553
offset_right = 1101.35
offset_bottom = 354.553
theme = SubResource("Theme_5cy6u")
text = "+"

[node name="CreateRoomButton" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 0
offset_left = 565.688
offset_top = 625.635
offset_right = 865.688
offset_bottom = 733.635
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_s43u1")
theme_override_font_sizes/font_size = 31
text = "Create Room"

[node name="PersonalityQuizButton" type="Button" parent="VBoxContainer2"]
layout_mode = 0
offset_left = 687.382
offset_top = 512.447
offset_right = 966.382
offset_bottom = 589.447
theme = ExtResource("7_1n1wr")
text = "Personality Quiz"

[node name="QuestionListButton" type="Button" parent="VBoxContainer2"]
layout_mode = 0
offset_left = 451.371
offset_top = 515.548
offset_right = 659.371
offset_bottom = 592.548
theme = ExtResource("7_1n1wr")
text = "Question List"

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 129.0
offset_bottom = 68.0
theme = ExtResource("8_8tmsi")
text = "BACK"

[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/PersonalityQuizButton" to="." method="_on_PersonalityQuizButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/QuestionListButton" to="." method="_on_QuestionListButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
